--- a/foodster/recipes/templates/author_recipes.html
+++ b/foodster/recipes/templates/author_recipes.html
@@ -2,7 +2,7 @@
 {% load user_filters %}
 {% load static %}
 {% load cache %}
-{% block title %}Last updates of {{ author.username }}{% endblock %}
+{% block title %}Последние обновления {{ author.username }}{% endblock %}
 
 {% block content %}
     {% load sub_funcs %}
@@ -39,7 +39,7 @@
                     <a href="{% url "login" %}">
                         <button class="button button_style_light-blue
                 button_size_subscribe" name="subscribe_not_logged" data-out="true">
-                            Subscribe
+                            Подписаться
                         </button>
                     </a>
                 {% endif %}
