--- a/foodster/recipes/templates/follow.html
+++ b/foodster/recipes/templates/follow.html
@@ -2,7 +2,7 @@
 {% load user_filters %}
 {% load static %}
 {% load cache %}
-{% block title %}Last recipes{% endblock %}
+{% block title %}Подписки{% endblock %}
 
 
 {% block content %}
