--- a/foodster/users/templates/registration/password_change_done.html
+++ b/foodster/users/templates/registration/password_change_done.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 {% load user_filters %}
 {% load static %}
+{% block main_css %}/static/pages/form.css{% endblock %}
 {% block title %}Password is changed{% endblock %}
 
 {% block content %}
     {% include 'includes/nav.html'  with password_change=True %}
-    <link rel="stylesheet" href="{% static "pages/form.css" %}">
     <main class="main container">
 
         <div class="custom-center-block">
