--- a/foodster/recipes/templates/index.html
+++ b/foodster/recipes/templates/index.html
@@ -6,16 +6,15 @@
 
 
 {% block content %}
-    {% include "includes/nav.html" with index=True %}
-    <link rel="stylesheet" href="{% static "pages/index.css" %}">
+    {% include "includes/nav.html" %}
     <main class="main container">
         <div class="main__header">
             <h1 class="main__title">{% block header %}Все рецепты{% endblock %}</h1>
-            {% include "includes/tags.html"  with path="/"%}
+            {% include "includes/tags.html" %}
         </div>
         <div class="card-list">
             {% for item in page %}
-                {% include "includes/item_card.html" %}
+                {% include "includes/item_card.html" with item=item %}
             {% endfor %}
         </div>
         {% if page %}
