--- a/foodster/users/templates/registration/logged_out.html
+++ b/foodster/users/templates/registration/logged_out.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 {% load user_filters %}
 {% load static %}
+{% block main_css %}/static/pages/form.css{% endblock %}
 {% block title %}Logged out{% endblock %}
 
 {% block content %}
     {% include 'includes/nav.html'  with logout=True %}
-    <link rel="stylesheet" href="{% static "pages/form.css" %}">
     <main class="main container">
         <div class="custom-center-block">
             <div class="main__header">
