--- a/foodster/users/templates/registration/password_change_form.html
+++ b/foodster/users/templates/registration/password_change_form.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 {% load user_filters %}
 {% load static %}
+{% block main_css %}/static/pages/form.css{% endblock %}
 {% block title %}Изменить пароль{% endblock %}
 {% block content %}
     {% include 'includes/nav.html'  with password_change=True %}
-    <link rel="stylesheet" href="{% static "pages/form.css" %}">
     <main class="main container">
         <div class="main__header">
             <h1 class="main__title">Изменить пароль</h1>
